# render-4d

./: Cargo.toml  README.md  build.rs
src/: 3d.frag  3d.vert  4d.comp  camera3d.rs  camera_3d.rs  camera_4d.rs  main.rs  physics.rs  player.rs  render.rs  render_3d.rs  render_4d.rs  setup.rs  shader.frag  shader.frag.spv  shader.vert.spv  surface.rs  swap_chain.rs  uniform.rs  uniform_3d.rs  uniform_4d.rs  utils.rs  view.rs  voxel.rs  window_size.rs  world.rs
